--- a/index.html
+++ b/index.html
@@ -3,13 +3,17 @@
 <head>
   <meta charset="utf-8">
   <title>Yang Sun| Fan of Data and Multimedia</title>
+      <link rel="stylesheet" href="css/main.css">
+      <link href='https://fonts.googleapis.com/css?family=Bree+Serif|Open+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
 </head>
 <body>
   <header>
-    <a href="index.html">
+    <div id="logo">
+    <a href="index.html" id="logo">
     <h1>Yang Sun</h1>
       <h2>Fan of Data and Multimedia</h2>
     </a>
+  </div>
     <nav>
       <ul>
         <li><a href="index.html">Protfolio</a></li>
@@ -20,11 +24,16 @@
       </ul>
     </nav>
   </header>
+  <div id="wrapper">
     <section>
       Self-description goes here.
     </section>
     <footer>
+      <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
+      <a href="http://www.facebook.com/yangsunyangyang" target="_blank"><img src="images/facebook.png" alt="facebook logo"></a>
+      <a href="http://www.linkedin.com/in/%E6%89%AC-%E5%AD%99-4996a0116?trk=nav_responsive_tab_profile_pic" target="_blank"><img src="images/LinkedIn.png" alt="linkedin logo"></a>
       <p>&copy; 2016 Yang Sun.</p>
     </footer>
+  </div>
 </body>
 </html>
