--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
   </div>
     <nav>
       <ul>
-        <li><a href="index.html">Protfolio</a></li>
-        <li><a href="photo.html">Photo</a></li>
-        <li><a href="multimedia.html">Multimedia</a></li>
-        <li><a href="data.html">Data J</a></li>
+        <li><a href="index.html">Protfolio    |</a></li>
+        <li><a href="photo.html">Photo    |</a></li>
+        <li><a href="multimedia.html">Multimedia |</a></li>
+        <li><a href="data.html">Data J    |</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
@@ -29,9 +29,9 @@
       Self-description goes here.
     </section>
     <footer>
-      <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
-      <a href="http://www.facebook.com/yangsunyangyang" target="_blank"><img src="images/facebook.png" alt="facebook logo"></a>
-      <a href="http://www.linkedin.com/in/%E6%89%AC-%E5%AD%99-4996a0116?trk=nav_responsive_tab_profile_pic" target="_blank"><img src="images/LinkedIn.png" alt="linkedin logo"></a>
+      <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo" class="social-icon"></a>
+      <a href="http://www.facebook.com/yangsunyangyang" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="social-icon"></a>
+      <a href="http://www.linkedin.com/in/%E6%89%AC-%E5%AD%99-4996a0116?trk=nav_responsive_tab_profile_pic" target="_blank"><img src="images/LinkedIn.png" alt="linkedin logo" class="social-icon"></a>
       <p>&copy; 2016 Yang Sun.</p>
     </footer>
   </div>
