--- a/photo.html
+++ b/photo.html
@@ -8,53 +8,47 @@
 </head>
 <body>
   <header>
+    <div id="logo">
     <a href="index.html" id="logo">
     <h1>Yang Sun</h1>
       <h2>Fan of Data and Multimedia</h2>
     </a>
+  </div>
     <nav>
       <ul>
-        <li><a href="index.html">Protfolio</a></li>
-        <li><a href="photo.html">Photo</a></li>
-        <li><a href="multimedia.html">Multimedia</a></li>
-        <li><a href="data.html">Data J</a></li>
+        <li><a href="index.html">Protfolio    |</a></li>
+        <li><a href="photo.html">Photo    |</a></li>
+        <li><a href="multimedia.html">Multimedia |</a></li>
+        <li><a href="data.html">Data J    |</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
     </nav>
   </header>
   <div id="wrapper">
     <section>
-      <ul>
+      <ul id="gallery">
         <li>
           <img src="images/farmers-market.jpg" alt="decisive moment">
           <p>Children play on the fence beam in Farmers Market in Columbia, Missouri.</p>
-        </li>
-        <li>
-          <img src="images/medium-shot.jpg" alt=" Shire of Standing Stone ">
-          <p>Fighters wear their own hand-made renaissance costume and are equipped with medieval armors.</p>
-        </li>
-        <li>
-          <img src="images/detail-shot.jpg" alt="Shire of Standing Stone">
-          <p>A Shire of Standing Stone member holds his own hand-made sword. </p>
         </li>
         <li>
           <img src="images/fire-hyrant.jpg" alt="seeing blue">
           <p>A blue bolt on the top of a fire hydrant on University Ave in Columbia, Missouri.</p>
         </li>
         <li>
-          <img src="images/climate-walk.jpg" alt="climate walk">
-          <p>A 5-kilometer climate walk in downtown Columbia, Missouri. </p>
+          <img src="images/medium-shot.jpg" alt=" Shire of Standing Stone ">
+          <p>Fighters wear their own hand-made renaissance costume and are equipped with medieval armors.</p>
         </li>
         <li>
-          <img src="images/img_5842.jpg" alt="portray">
-          <p>Had a fun talk with Diana Anglin.</p>
+          <img src="images/detail-shot.jpg" alt="Shire of Standing Stone" style="width:750px;height:400px;">
+          <p>A Shire of Standing Stone member holds his own hand-made sword. </p>
         </li>
       </ul>
     </section>
     <footer>
-      <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo"></a>
-      <a href="http://www.facebook.com/yangsunyangyang" target="_blank"><img src="images/facebook.png" alt="facebook logo"></a>
-      <a href="http://www.linkedin.com/in/%E6%89%AC-%E5%AD%99-4996a0116?trk=nav_responsive_tab_profile_pic" target="_blank"><img src="images/LinkedIn.png" alt="linkedin logo"></a>
+      <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo" class="social-icon"></a>
+      <a href="http://www.facebook.com/yangsunyangyang" target="_blank"><img src="images/facebook.png" alt="facebook logo" class="social-icon"></a>
+      <a href="http://www.linkedin.com/in/%E6%89%AC-%E5%AD%99-4996a0116?trk=nav_responsive_tab_profile_pic" target="_blank" class="social-icon"><img src="images/LinkedIn.png" alt="linkedin logo" class="social-icon"></a>
       <p>&copy; 2016 Yang Sun.</p>
     </footer>
   </div>
