multimedia page/about page

--- a/index.html
+++ b/index.html
@@ -16,17 +16,22 @@
   </div>
     <nav>
       <ul>
-        <li><a href="index.html">Protfolio    |</a></li>
+        <li><a href="index.html">About    |</a></li>
         <li><a href="photo.html">Photo    |</a></li>
         <li><a href="multimedia.html">Multimedia |</a></li>
         <li><a href="data.html">Data J    |</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
   <div id="wrapper">
+    <img src="images/yang.jpg" alt="headshot" height="200" width="200" id="headshot">
     <section>
-      Self-description goes here.
+      <p>Hello, my name is Yang, and I am currently a graduate student at University of Missouri, pursuing my master degree on journalism. My sequences are convergence reporting (multimedia) and data journalism. </p>
+      <p>Before came to United States, I was a political journalism in China. I enjoyed my job covering Beijing, and the elite group of China. Nonetheless, I realized digging into data to find out the naked truth, and recording the stories of normal people are my real affection.</p>
+      <p>I have been frequentluy travelling between China, United States and Europe since these years. I would like to apply my knowledge and my experience to further understand the most trio-lateral relation in today's international community.</p>
+      <p>During my spare time, I am a foodie who enjoy cooking fusion food and travlling to everywhere for gourmet. If you know the best restaurant in the town, please let me know!</p>
+      <p>Want to know more about me? Click <a href="resume.pdf" target="_blank">here</a> for my resume.</p>
     </section>
     <footer>
       <a href="http://twitter.com/sunyang86426576" target="_blank"><img src="images/twitter.png" alt="twitter logo" class="social-icon"></a>
