--- a/photo.html
+++ b/photo.html
@@ -16,11 +16,11 @@
   </div>
     <nav>
       <ul>
-        <li><a href="index.html">Protfolio    |</a></li>
+        <li><a href="index.html">About    |</a></li>
         <li><a href="photo.html">Photo    |</a></li>
         <li><a href="multimedia.html">Multimedia |</a></li>
         <li><a href="data.html">Data J    |</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="blog.html">Blog</a></li>
       </ul>
     </nav>
   </header>
